Started to work in index.js To follow some tips of friend Kervin ES, I begun to work in scripts firstly to then styles the page. I made a function that add a class when it is invoked. Firstly I used a filter. But this change all elements. After some minutes of searchs, I found a property called backdrop-filter, that change the background behind the element. But it doesn't work, yet. Tomorrow I'll fix this.

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -12,4 +12,11 @@ html {
 
 body {
   height: 100%;
+  background: url(../img/bg-03.jpg);
+  background-size: cover;
+}
+
+.blurred-img {
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
 }
